--- a/starter/css/style.css
+++ b/starter/css/style.css
@@ -7,15 +7,13 @@ Dark green: #28b485
 
 */
 
-*
-{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
-body
-{
+body {
     font-family: "Lato", sans-serif;
     font-weight: 400;
     font-size: 16px;
@@ -24,8 +22,7 @@ body
     padding: 30px;
 }
 
-.header
-{
+.header {
     height: 95vh;
     background-image: linear-gradient(
         to right bottom,
@@ -39,36 +36,33 @@ body
     clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
 }
 
-.logo-box
-{
+.logo-box {
     position: absolute;
     top: 40px;
     left: 40px;
 }
 
-.logo
-{
+.logo {
     height: 35px;
 }
 
-.text-box
-{
+.text-box {
     position: absolute;
     top: 40%;
     left: 50%;
     transform: translate(-50%, -50%);
+    text-align: center;
 }
 
-.heading-primary
-{
+.heading-primary {
     color: #fff;
     text-transform: uppercase;
 
     backface-visibility: hidden;
+    margin-bottom: 60px;
 }
 
-.heading-primary-main
-{
+.heading-primary-main {
     display: block;
     font-size: 60px;
     font-weight: 400;
@@ -86,8 +80,7 @@ body
     */
 }
 
-.heading-primary-sub
-{
+.heading-primary-sub {
     display: block;
     font-size: 20px;
     font-weight: 700;
@@ -98,8 +91,7 @@ body
     animation-timing-function: ease-out;
 }
 
-@keyframes moveInLeft
-{
+@keyframes moveInLeft {
     0% {
         opacity: 0;
         transform: translateX(-100px);
@@ -113,8 +105,7 @@ body
     }
 }
 
-@keyframes moveInRight
-{
+@keyframes moveInRight {
     0% {
         opacity: 0;
         transform: translateX(100px);
@@ -126,4 +117,68 @@ body
         opacity: 1;
         transform: translate(0);
     }
+}
+
+@keyframes moveInBottom {
+    0% {
+        opacity: 0;
+        transform: translateY(30px);
+    } 
+    100% {
+        opacity: 1;
+        transform: translate(0);
+    }
+}
+
+.btn:link, .btn:visited {
+    text-transform: uppercase;
+    text-decoration: none;
+    padding: 15px 40px;
+    display: inline-block;
+    border-radius: 100px;
+    transition: all .2s;
+    position: relative;
+}
+
+.btn:hover {
+    transform: translateY(-3px);
+    box-shadow: 0 10px 20px rgba(0, 0, 0, .2);
+}
+
+.btn:active {
+    transform: translateY(-1px);
+    box-shadow: 0 5px 10px rgba(0, 0, 0, .2);
+}
+
+.btn-white {
+    background-color: white;
+    color: #777;
+}
+.btn::after {
+    content: '';
+    display: inline-block;
+    height: 100%;
+    width: 100%;
+    border-radius: 100px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    transition: all .4s;
+}
+
+.btn-white::after {
+    background-color: #fff;
+
+}
+
+.btn:hover::after {
+    transform: scaleX(1.4) scaleY(1.6);
+    opacity: 0;
+}
+
+
+.btn-animated {
+    animation: moveInBottom .5s ease-out .75s;
+    animation-fill-mode: backwards;
 }
